:memo: Add documentation of UltraStar txt parser to report #37
Closes #37 by documenting choices made on the implementation

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -3,6 +3,7 @@
 Este proyecto es software libre, y está liberado con la licencia AGPLv3 \cite{agpl}.
 
 \section{Motivación}
+\label{sec:motivation}
 
 El karaoke es un tipo de entretenimiento consistente en cantar junto a música grabada, normalmente con la ayuda de una pantalla en la que se muestra la letra de la canción e indicaciones de cuando hay que cantar cada parte.
 
