:memo: Add documentation for implementation of pitch cli app to report #40
Closes #40 by documenting design and techniques choices while implementing pitch cli app.

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -56,3 +56,37 @@
   timestamp = {2014-11-28}
 }
 
+@misc{mp3patents,
+	key = {Expiración de patentes MP3},
+	author = {tunequest},
+	title = {A Big List of MP3 Patents (and supposed expiration dates)},
+	year = {2007},
+	howpublished = {\url{https://www.tunequest.org/a-big-list-of-mp3-patents/20070226/}}
+}
+
+@INPROCEEDINGS{pYIN,
+	author={Mauch, Matthias and Dixon, Simon},
+	booktitle={2014 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}, 
+	title={PYIN: A fundamental frequency estimator using probabilistic threshold distributions}, 
+	year={2014},
+	pages={659-663},
+	doi={10.1109/ICASSP.2014.6853678}
+}
+
+@INPROCEEDINGS{CREPE,  
+	author={Kim, Jong Wook and Salamon, Justin and Li, Peter and Bello, Juan Pablo},  
+	booktitle={2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},   
+	title={Crepe: A Convolutional Representation for Pitch Estimation},  
+	year={2018}, 
+	pages={161-165},  
+	doi={10.1109/ICASSP.2018.8461329}
+}
+
+@ARTICLE{SPICE,  
+	author={Gfeller, Beat and Frank, Christian and Roblek, Dominik and Sharifi, Matt and Tagliasacchi, Marco and Velimirović, Mihajlo},  journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing},   
+	title={SPICE: Self-Supervised Pitch Estimation},   
+	year={2020},  
+	volume={28},  
+	pages={1118-1128},  
+	doi={10.1109/TASLP.2020.2982285}
+}
