--- a/doc/secciones/04_planificacion.tex
+++ b/doc/secciones/04_planificacion.tex
@@ -57,7 +57,7 @@ Se han creado historias de usuario para especificar las necesidades de los usuar
 
 \noindent{Se han definido las siguientes historias de usuario:}
 
-\subsubsection*{\href{https://github.com/dipzza/ultrastar-song2txt/issues/7}{[HU01] Creador Karaoke - Detección de tonos}}
+\subsubsection*{\href{https://github.com/dipzza/ultrastar-song2txt/issues/7}{[HU01] Creador Karaoke - Detección de tonos}}\label{sec:hu1}
 
 Como creador de canciones para karaoke quiero poder asignar los tonos de la canción en menos tiempo y con menor dificultad.
 
@@ -121,7 +121,7 @@ Al subir cualquier cambio a GitHub se ejecutan automáticamente las pruebas. Par
 
 \begin{itemize}
 	\item{Errores, adherencia a la guía de estilo \href{https://peps.python.org/pep-0008/}{PEP8} y complejidad del código.}
-	\item{Test unitarios y tests de cobertura}
+	\item{Test unitarios, de integración y de cobertura}
 	\item{Correcta instalación del proyecto y sus dependencias}
 \end{itemize}
 
